# IoT_controller

./: README.md  __setup.py  classes.puml  diagram.puml  instructions rpi  main.py  setup.cfg  setup.py
src/: audio.py  mqtt.py  sensors.py  utils.py
src/mqttTasks/: base.py  sensors.py  texttospeech.py
src/mqttTasks/sensorDevices/: README.md  mq135.py  scd41.py  sds011.py
src/mqttTasks/sensorDevices/old/: ad_helper.py  mq135.py
src/mqtttasks/: base.py  sensors.py  texttospeech.py
src/mqtttasks/sensordevices/: base.py  mq135.py  sds011.py
src/utils/: config.py  configuration.py  det_platform.py  mqttuser.py
test/: test_sensors.py
