[metadata]
name = airalert-iot-controller
version = 0.1.0
author = AirAlert
description = IoT-controller software for the AirAlert project
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    paho-mqtt
    distro
    py-cpuinfo

[options.extras_require]
rpi =
    sds011lib
    adafruit-circuitpython-ads1x15
    adafruit-blinka

[options.packages.find]
where = src